--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,23 @@
 *.exe
 *.out
 *.app
+
+
+# image files
+*.jpg
+*.jpeg
+*.bmp
+*.gif
+*.img
+*.dat
+*.png
+*.tif
+*.tiff
+*.wmf
+*.svg
+*.ai
+*.pdf
+*.eps
+
+# ignore thumbnails
+*.db
